eks/globo-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globomantics-api  
spec:
  selector:
    matchLabels:
      app: globomantics-api
  replicas: 1
  template:
    metadata:
      labels:
        app: globomantics-api
    spec:
      containers:
      - name: api
        image: 073431393079.dkr.ecr.us-west-2.amazonaws.com/globomantics_api:latest        
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: globoapi-service
spec:
  selector:
    app: globomantics-api  
  type: ClusterIP  
  ports:
    - protocol: TCP 
      port: 5000
      targetPort: 5000
