eks/globo-sql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globosql
spec:
  selector:
    matchLabels:
      app: globosql
  replicas: 1  
  template:
    metadata:
      labels:
        app: globosql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: globosql
        image: 073431393079.dkr.ecr.us-west-2.amazonaws.com/globomantics_database:latest
        ports:
        - containerPort: 1433 
---
apiVersion: v1
kind: Service
metadata:
  name: globosql-service
spec:
  selector:
    app: globosql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: globosql
spec:
  selector:
    app: globosql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
